force-app/main/default/objects/Stack_DP_Rank__c/Stack_DP_Rank__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Stack DP Rank</label>
</CustomObject>