force-app/main/default/objects/Stack_DP_Rank__c/fields/New_Active_0_4__c.field-meta.xml
<CustomField>
    <fullName>New_Active_0_4__c</fullName>
    <label>New Active 0 - 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>