force-app/main/default/objects/Stack_DP_Rank__c/fields/Project_Score__c.field-meta.xml
<CustomField>
    <fullName>Project_Score__c</fullName>
    <label>Project Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>