force-app/main/default/objects/Stack_DP_Rank__c/fields/Rank_for_Conversion_Percent__c.field-meta.xml
<CustomField>
    <fullName>Rank_for_Conversion_Percent__c</fullName>
    <label>Rank for Conversion Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>