force-app/main/default/objects/Stack_DP_Rank__c/fields/X10_40_score__c.field-meta.xml
<CustomField>
    <fullName>X10_40_score__c</fullName>
    <label>10 40 score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>